# VisionHub1

./: README.md
config_templates/: label.yaml  panel_seg.yaml  project_example.yaml  projection_compare.yaml  service_config.yaml  siamese_compare.yaml  strip_patchcore.yaml  weld.yaml
csharp_ui/: VisionHubUI.sln
csharp_ui/VisionHubUI/: MainForm.cs  Program.cs  VisionHubUI.csproj
csharp_ui/VisionHubUI/Models/: HealthInfo.cs  InferResult.cs  LabelTrainModels.cs  ProjectInfo.cs  TrainJobInfo.cs
example/: patchcore_roi_tiling.py
label/: crop_glyphs_from_json.py  glyph_watch_service.py  predict_from_json_patchcore.py  shrink_bank.py  train_glyph_patchcore.py
python_service/: README.md  pyproject.toml
python_service/app/: __init__.py  config.py  http_api.py  main.py  project_manager.py  result_schema.py  scheduler.py  tcp_server.py  train_manager.py
python_service/app/plugins/: __init__.py  base.py  glyph_patchcore_core.py  glyph_patchcore_plugin.py  glyph_structural_core.py  glyph_synthdefect_core.py  panel_seg_core.py  panel_seg_plugin.py  patchcore_core.py  patchcore_plugin.py  patchcore_strip_core.py  patchcore_strip_plugin.py  projection_compare_core.py  projection_compare_plugin.py  registry.py  resnet_classify_core.py  resnet_classify_plugin.py  siamese_compare_core.py  siamese_compare_plugin.py
python_service/app/utils/: file_utils.py  logging_utils.py
scripts/: prepare_offline.bat  setup.bat
tools/: labelme_to_masks.py
tools/deploy/: README.md  install.bat  pack_offline.bat
ttr/: run_weld_sort.py  server.py  train_weld_cls.py
(+1 files in other folders)
